Fix project gallery stretching

--- a/style.css
+++ b/style.css
@@ -181,7 +181,9 @@ body {
 
 .projectGallery {
     display: grid;
+    grid-template-rows: auto 1fr;
     gap: 1rem;
+    height: 100%;
 }
 
 .projectGallery-title {
@@ -194,6 +196,7 @@ body {
     gap: 1rem;
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 .projectGallery-list>.projectGallery-card {
